--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/src/assets/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Serigado IV - Steamflood Analytical Assessment</title>
   </head>
@@ -11,4 +11,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
